# arc-restaurant

./: .env.example  .gitattributes  .gitignore  .vercelignore  Cargo.toml  LICENSE  Makefile  README.md  eslint.config.js  get_xlm_sac.mjs  index.html  package-lock.json  package.json  test-address.mjs  vercel.json
.cargo/: config.toml
.github/workflows/: ci.yml  deploy-contract.yml
contracts/restaurant/: Cargo.toml
contracts/restaurant/src/: lib.rs  test.rs
docs/: ARCHITECTURE.md  DEPLOYMENT.md  MANUAL-DEPLOY.md
docs/screenshots/: README.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json
frontend/scripts/: auto_patcher.mjs  compress_zeroes.mjs  deploy-contract.mjs  deploy.sh  publish.ps1
frontend/src/: index.css
frontend/src/components/: EventStream.jsx  RestaurantPanel.jsx
frontend/src/context/: WalletContext.jsx
frontend/src/hooks/: useEventStream.js  useWallet.js
frontend/src/lib/: account.js  contract.js  soroban.js
frontend/src/test/: WalletConnect.test.jsx  contract.test.js
scripts/: deploy-contract.mjs  deploy_auto.mjs  publish.ps1  surgery.mjs  test-pay-sim.mjs
src/: App.jsx  index.css
src/components/: EventStream.jsx  PurchaseConfirmModal.jsx  RestaurantPanel.jsx  WalletConnect.jsx
src/hooks/: useEventStream.js  useWallet.js
src/lib/: account.js  contract.js  soroban.js
src/test/: WalletConnect.test.jsx  contract.test.js
