[package]
name = "restaurant-contract"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]
doctest = false

[dependencies]
soroban-sdk = "22.0.0"

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "all"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
incremental = false

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
